--- a/src/app/pages/course/components/course-content/course-content.component.html
+++ b/src/app/pages/course/components/course-content/course-content.component.html
@@ -1,5 +1,5 @@
-<!-- 多補一個類似於click.self="hideContent()"" -->
-<ng-container *ngIf="score_data">
+<!-- 多補一個 [routerLink]="['/course']"-->
+<ng-container *ngIf="scoreData">
     <div id="courseContent">
         <div class="content_nextpage" style="display: none">
             <img style="cursor: pointer" src="../../../../../assets/images/course/left-btn.svg" />
@@ -9,45 +9,44 @@
         <div class="courseContentBody">
             <!-- 頁面左半邊 -->
             <div class="courseContentBody__left">
-                <span class="courseSerial" *ngIf="course_data['選課序號'] as string; else undefinedSerial" [ngClass]="course_data['系號']">{{ course_data['選課序號'] }}</span>
+                <span class="courseSerial" *ngIf="courseData['選課序號']; else undefinedSerial" [ngClass]="courseData['系號']">{{ courseData['選課序號'] }}</span>
                 <ng-template #undefinedSerial>
                     <span class="courseSerial">未定</span>
                 </ng-template>
 
-                <h2>{{ course_data['課程名稱'] }}</h2>
+                <h2>{{ courseData['課程名稱'] }}</h2>
 
-                <!-- 補一個@click="openOutline(courseData['系號'], courseData['課程碼'])" -->
-                <div class="flex-container icon-span"><span class="content-icon see_clip"></span><span>檢視課程大綱</span></div>
+                <div class="flex-container icon-span" (click)="openOutline(courseData['系號'], courseData['課程碼'])"><span class="content-icon see_clip"></span><span>檢視課程大綱</span></div>
 
                 <!-- 應改成能判斷加入或移除 -->
-                <div class="flex-container icon-span desktop_only"><span class="content-icon add_wishlist"></span><span>加入願望清單</span></div>
-                <!-- 
-                <div class="flex-container icon-span desktop_only" @click="content_setWishlist(course_data.id)">
-                    <div class="content-icon add_wishlist" v-show="!userData.now_wishlist.includes(course_data.id)"></div>
-                    <span v-show="!userData.now_wishlist.includes(course_data.id)">加入願望清單</span>
-                    <div class="content-icon already_add_wishlist" v-show="userData.now_wishlist.includes(course_data.id)"></div>
-                    <span v-show="userData.now_wishlist.includes(course_data.id)" style="color: #F35A5A">移除願望清單</span>
-                </div>-->
+                <div class="flex-container icon-span desktop_only" (click)="setWishlist(courseData.id)">
+                    <div *ngIf="!wishList.includes(courseData.id)"><span class="content-icon add_wishlist"></span><span>加入願望清單</span></div>
+                    <div *ngIf="wishList.includes(courseData.id)"><span class="content-icon already_add_wishlist"></span><span style="color: #f35a5a">移除願望清單</span></div>
+                </div>
+
+                <!-- <div class="flex-container icon-span">
+                    <span class="content-icon see_clip"></span><span>新增課程評分</span>
+                </div> -->
 
                 <div class="courseUnit">
                     <div class="block_title">
                         <p class="text_14">開課單位</p>
                     </div>
-                    <p class="text_16">{{ course_data['系所名稱'] }}</p>
+                    <p class="text_16">{{ courseData['系所名稱'] }}</p>
                 </div>
 
                 <div class="courseUnit">
                     <div class="block_title">
                         <p class="text_14">開課老師</p>
                     </div>
-                    <p class="text_16">{{ course_data['老師'] }}</p>
+                    <p class="text_16">{{ courseData['老師'] }}</p>
                 </div>
 
                 <div class="courseUnit">
                     <div class="block_title">
                         <p class="text_14">開課時段</p>
                     </div>
-                    <p class="text_16">{{ course_data['時間'] }}</p>
+                    <p class="text_16">{{ courseData['時間'] }}</p>
                 </div>
                 <br />
             </div>
@@ -55,13 +54,13 @@
             <!-- 頁面右半邊 -->
             <div class="courseContentBody__right">
                 <div class="courseContentBody__right__score">
-                    <div class="block_title" *ngIf="score_data.rate_count; else undefinedRateCount">
-                        <p>課程評分 ({{ score_data.rate_count }})</p>
+                    <div class="block_title" *ngIf="scoreData.rate_count; else undefinedRateCount">
+                        <p>課程評分 ({{ scoreData.rate_count }})</p>
                     </div>
-                    <div class="flex-container score-btn--all" *ngIf="score_data.rate_count">
+                    <div class="flex-container score-btn--all" *ngIf="scoreData.rate_count">
                         <div class="score-btn">
                             <span>收穫 </span>
-                            <span class="score_span">{{ score_data.got }}</span>
+                            <span class="score_span">{{ scoreData.got }}</span>
                             <!-- <div class="arrow-left" @click="minusRate('recom_rate')"></div>
                             <input class="score_input" id="recom_rate" type="number" value="5" min="1" max="10" />
                             <div class="arrow-right" @click="addRate('recom_rate')"></div> -->
@@ -69,7 +68,7 @@
 
                         <div class="score-btn">
                             <span>甜度 </span>
-                            <span class="score_span">{{ score_data.sweet }}</span>
+                            <span class="score_span">{{ scoreData.sweet }}</span>
                             <!-- <div class="arrow-left" @click="minusRate('sweet_rate')"></div>
                             <input class="score_input" id="sweet_rate" type="number" value="5" min="1" max="10" />
                             <div class="arrow-right" @click="addRate('sweet_rate')"></div> -->
@@ -77,7 +76,7 @@
 
                         <div class="score-btn">
                             <span>涼度 </span>
-                            <span class="score_span">{{ score_data.cold }}</span>
+                            <span class="score_span">{{ scoreData.cold }}</span>
                             <!-- <div class="arrow-left" @click="minusRate('hard_rate')"></div>
                             <input class="score_input" id="hard_rate" type="number" value="5" min="1" max="10" />
                             <div class="arrow-right" @click="addRate('hard_rate')"></div> -->
@@ -102,12 +101,12 @@
 
                 <div class="courseContentBody__right__comment">
                     <div class="block_title">
-                        <p>課程心得 ({{ comment_data.length }})</p>
+                        <p>課程心得 ({{ commentData.length }})</p>
                     </div>
 
                     <div class="courseFeedback">
-                        <div id="commentBody" *ngIf="comment_data.length > 0; else undefinedComment">
-                            <div class="courseFeedback__single" *ngFor="let comment of comment_data">
+                        <div id="commentBody" *ngIf="commentData.length > 0; else undefinedComment">
+                            <div class="courseFeedback__single" *ngFor="let comment of commentData">
                                 <div class="courseFeedback__icons">
                                     <div class="rec_semester">
                                         <span>{{ comment.semester }} 學期</span>
